...
                size={20}
              />
            </Pressable>
            <Text className="text-center font-bold text-lg text-slate-900 leading-tight tracking-tight dark:text-white">
              {isEditMode
                ? i18n.t("home.edit-visit.title")
                : (i18n.t("home.add-visit.title") ?? "Add a New Visit")}
            </Text>
            <View className="size-10" />
          </View>

          <ScrollView
            className="flex-1"
...
