...
                {i18n.t("home.subtitle", { name: greetingName })}
              </Text>
            </Box>
          </Box>
          <Link asChild href="/add-visit">
            <Button
              accessibilityLabel="home-add-fab"
              action="primary"
              className="h-12 w-12 items-center justify-center rounded-full p-0 shadow-sm"
              size="md"
              style={{ backgroundColor: primaryColor }}
              testID="home-add-fab"
              variant="solid"
...
