...
      country: "France",
      flag: "🇫🇷",
      lastVisitDate: "2023-01-15T10:00:00+01:00",
    },
    {
      id: "2",
      country: "Japan",
      flag: "🇯🇵",
      lastVisitDate: "2022-12-05T09:00:00+09:00",
    },
    {
      id: "3",
      country: "United States",
...
